--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,18 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.c-green-export {
+  color: #029d55;
+  border: solid 0.5px #029d55;
+}
+
+.btn-logout {
+  border: solid 1px #00bcd4;
+  border-radius: 20px;
+  margin: 0 5px;
+  height: 30px;
+  padding: 0 10px;
+  display: flex;
+  align-items: center;
+}
