--- a/src/app/views/pages/home/home.component.html
+++ b/src/app/views/pages/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="title1">{{ g == "F" ? "Bienvenida" : "Bienvenido" }}</div>
     <div class="textcontent">Esta es la plataforma</div>
     <div class="textcontent">
-      del <span class="mbold"> Sistema NOC</span>
+      del <span class="mbold"> Dynamo PROCESOS</span>
     </div>
     <div class="uservalidation" *ngIf="loading">
       <mat-spinner diameter="19" style="margin: 0 10px"></mat-spinner> Validando
