--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
@@ -1,30 +1,10 @@
 @import "variables.scss";
 
 .modal-title {
-  font-size: 1.7rem;
+  font-size: 1.3rem;
   font-weight: 400;
   margin: 4px 0;
   text-align: center;
-}
-
-.text-alert {
-  font-size: 10px;
-  color: #f66d7a;
-  margin-top: 0;
-}
-
-.w300 {
-  width: 300px;
-}
-
-.w100 {
-  width: 100px;
-  // height: 48px;
-}
-
-
-.w55 {
-  width: 55px;
 }
 
 .cli-table {
@@ -32,14 +12,13 @@
   background-color: #fff;
   & th {
     padding: 4px;
-    font-weight: 300 !important;
+    font-weight: 300;
     text-align: center;
   }
   & td {
     vertical-align: middle;
     text-align: center;
-    font-size: 0.8rem;
-    // padding: 4px 8px;
+    font-size: 0.7rem;
   }
   &-actions {
     display: flex;
@@ -52,6 +31,63 @@
   }
 }
 
+.total {
+  color: #97999b;
+}
+
+.btn-hardware {
+  border: none;
+  border-radius: 2px;
+  margin: 0 1px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  border: solid 1px #007bff;
+
+}
+
+.buscar {
+  border-radius: 2px;
+  font-weight: 500;
+  padding: 5px;
+  border: 0.5px solid #e1e1e2;
+}
+
+.form-select {
+  font-size: 10px;
+}
+
+.form-control {
+  font-size: 10px;
+}
+
+.card-footer:last-child {
+  font-size: 10px;
+}
+
+.w150 {
+  width: 150px; // OJO: FALTA VALIDAR
+}
+
+
+.label {
+  // padding: 3px 10px;
+  padding: 1px 6px;
+  line-height: 13px;
+  color: #fff;
+  font-weight: 400;
+  border-radius: 4px;
+  font-size: 75%;
+  background-color: #398bf7;
+  width: 190px;
+}
+
+.estado-danger {
+  background-color: #ff727f;
+}
+.estado-info {
+  background-color: #20c997;
+}
 
 @media (max-width: 768px) {
   .modal-title {
@@ -59,7 +95,6 @@
     font-weight: 400;
     margin: 5px 0;
     text-align: center;
-    // margin-left: 20%;
   }
   .btn-m {
     height: 20px;
